<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".buyer.MainClientActivity">

    <View
        style="@style/headerContent"/>

    <TextView
        android:id="@+id/sd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selamat_datang"
        android:textSize="20sp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@android:color/white"/>
    <TextView
        android:id="@+id/get_username_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_app"
        android:textSize="22sp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@android:color/white"
        android:layout_below="@id/sd"/>

    <EditText
        android:id="@+id/search_home_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20sp"
        android:layout_below="@id/get_username_client"
        android:background="@drawable/edt_text_search"
        android:hint="@string/search"
        android:fontFamily="@font/montserrat_medium"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawablePadding="8dp"
        android:elevation="22dp"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/txp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/produk_terbaru"
        style="@style/titleSubSet"
        android:layout_below="@id/search_home_client"
        android:layout_marginTop="30dp"/>

    <include
        android:id="@+id/indicator"
        layout="@layout/product_client_category"
        android:layout_below="@id/txp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/product_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/indicator"/>

    <TextView
        android:id="@+id/ls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lihat_selengkapnya"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/colorPrimary"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edt_text"
        android:layout_below="@id/product_container"/>

    <TextView
        android:id="@+id/txa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artikel_terbaru"
        style="@style/titleSubSet"
        android:layout_below="@id/ls"
        android:layout_marginTop="30dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_artikel_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txa"
        tools:listitem="@layout/artikel_item"/>
</RelativeLayout>