<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cnbfragment.HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <View
        style="@style/headerContent"/>

    <TextView
        android:id="@+id/sd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selamat_datang"
        android:textSize="20sp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@android:color/white"/>
    <TextView
        android:id="@+id/get_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_app"
        android:textSize="22sp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@android:color/white"
        android:layout_below="@id/sd"/>

    <EditText
        android:id="@+id/search_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20sp"
        android:layout_below="@id/get_username"
        android:background="@drawable/edt_text_search"
        android:hint="@string/search"
        android:fontFamily="@font/montserrat_medium"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawablePadding="8dp"
        android:elevation="22dp"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/txp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/produk_terlaris"
        style="@style/titleSubSet"
        android:layout_below="@id/search_home"
        android:layout_marginTop="30dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_produklaris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txp"
        android:layout_margin="15dp"/>

    <TextView
        android:id="@+id/txa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artikel_terbaru"
        style="@style/titleSubSet"
        android:layout_below="@id/rv_produklaris"
        android:layout_marginTop="30dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_artikel_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txa"
        tools:listitem="@layout/artikel_item"/>
</RelativeLayout>